update Per-Stae SPA Styles, year and home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Savvy Coders Jan. 2020 Cohort</title>
+    <title>Savvy Coders JavaScript Fullstack Cohort</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header>
-      <h1>Example SPA</h1>
+      <h1>SavvyCoders Example SPA</h1>
     </header>
     <nav>
       <i class="fas fa-bars"></i>
@@ -32,11 +32,13 @@
       </ul>
     </nav>
     <section id="jumbotron">
-      <h2>Savvy Coders Jan. 2020 Cohort</h2>
-      <a href="">"Call to Action" "Button"</a>
+      <h2>Savvy Coders JavaScript Fullstack Cohort</h2>
+      <a href="" onClick="alert('Hello! You clicked the Button!')"
+        >"Call to Action Button"</a
+      >
     </section>
     <footer>
-      &copy; 2020 <a href="https://savvycoders.com/">Savvy Coders</a>
+      &copy; 2021 <a href="https://savvycoders.com/">Savvy Coders</a>
     </footer>
     <script src="index.js"></script>
   </body>
